Closed Bug 1686839 Opened 5 years ago Closed 5 years ago

textbox children get partially pruned

Categories

(Core :: Disability Access APIs, defect, P2)

All
macOS
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_2])

Attachments

(1 file)

STR:

  1. Load data:text/html,<div id="textbox" role="textbox">Hello <a href="#">strange</a> world</div>
  2. Dump accessibility tree

Result:
textbox has two children, an AXLink (strange) and a AXStaticText (world), the first text leaf is missing.

Expected:
textbox should ave three children a text leaf, link and another text leaf.

I think that perhaps the other children are not in the initial tree, so at creation time the textbox only has one child so MustPrune returns true which makes us skip the first child.

Another way to reproduce this is to add children to widgets after they are created. The MustPrune rule will only work on the first child.

Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/156fb3f97493 Apply MustPrune dynamically and not at creation time. r=morgan
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: