Bug 1686839 - Apply MustPrune dynamically and not at creation time. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D101853