accessible/mac/AccessibleWrap.mm
@@ -71,17 +71,10 @@ mozAccessible* AccessibleWrap::GetNativeObject() {
     // We don't creat OSX accessibles for xul tooltips, defunct accessibles,
     // <br> (whitespace) elements, or pruned children.
     //
-    // We also don't create a native object if we're child of a "flat"
-    // accessible; for example, on OS X buttons shouldn't have any children,
-    // because that makes the OS confused.
-    //
     // To maintain a scripting environment where the XPCOM accessible hierarchy
     // look the same on all platforms, we still let the C++ objects be created
     // though.
-    Accessible* parent = Parent();
-    bool mustBePruned = parent && nsAccUtils::MustPrune(parent);
-    if (!IsXULTooltip() && !IsDefunct() && !mustBePruned &&
-        Role() != roles::WHITESPACE) {
+    if (!IsXULTooltip() && !IsDefunct() && Role() != roles::WHITESPACE) {
       mNativeObject = [[GetNativeType() alloc] initWithAccessible:this];
     }
   }
